--- a/Backend/SevaSangam/src/main/resources/application.properties
+++ b/Backend/SevaSangam/src/main/resources/application.properties
@@ -20,3 +20,28 @@ spring.datasource.hikari.max-lifetime=1800000
 
 
 server.port=8081
+
+
+
+#spring.application.name=SevaSangam
+#
+## Database Configuration
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/sevasangam
+#spring.datasource.username=postgres
+#spring.datasource.password="9850"  # Wrap password in quotes if needed
+#
+## Hibernate Configuration
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#
+## Connection Pooling (HikariCP)
+#spring.datasource.hikari.minimum-idle=5
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.auto-commit=true
+#spring.datasource.hikari.connection-timeout=30000
+#spring.datasource.hikari.idle-timeout=600000
+#spring.datasource.hikari.max-lifetime=1800000
+#
+## Server Configuration
+#server.port=8081
