add ngo requirement api

--- a/Backend/SevaSangam/src/main/resources/application.properties
+++ b/Backend/SevaSangam/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SevaSangam
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/sevasangam
+spring.datasource.url=jdbc:postgresql://localhost:5432/seva_sangam
 spring.datasource.username=postgres
 spring.datasource.password=2448
 
